edit download btn

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <a href="https://it.nttdata.com/files/NTT_Report24_Sostenibilita_ITA.pdf" 
-        download="NTT_Report24_Sostenibilita_ITA.pdf" class="download-btn">
+         class="download-btn">
         <?xml version="1.0" encoding="utf-8"?>
         <svg class="download" width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 
